[project.urls]
"Homepage" = "https://getjavelin.io"

[tool.poetry]
name = "javelin-sdk"
version = "0.2.6"
description = "Python client for Javelin"
authors = ["Sharath Rajasekar <sharath@getjavelin.io>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "javelin_cli" },
    { include = "javelin_sdk" },
]

[tool.poetry.scripts]
javelin = "javelin_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
pydantic = "^1.10.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-httpx = "^0.22.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
ruff = "^0.0.265"
mypy = "^1.2.0"
pre-commit = "^3.3.1"
mkdocs = "^1.4.3"
mkdocstrings = {version = "0.21.2", extras = ["python"]}
python-dotenv = "^1.0.0"
mkdocs-material = "^9.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
